# CT-String

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  basic_hash_usage.cpp  basic_path_manipulation.cpp  basic_string_manipulation.cpp  basic_usage.cpp  use_case_compilation_info.cpp  use_case_config_keys.cpp  use_case_file_registry.cpp  use_case_logger.cpp  use_case_path_builder.cpp
include/: ct_str.hpp
include/details/: byte_store.hpp  fixed_string.hpp  hash.hpp  path_fns.hpp  string_fns.hpp  string_store.hpp
test/: CMakeLists.txt  test_dummy_feature.cpp  test_fixed_string.cpp  test_hash_functions.cpp  test_multi_char_types.cpp  test_path_operations.cpp  test_string_operations.cpp  test_string_queries.cpp  test_string_store.cpp
